# esp-bsp

./: README.md
SquareLine/boards/esp32_s3_eye/: manifest.json
bsp/esp32_p4_eye/: CMakeLists.txt  README.md  esp32_p4_eye.c  esp32_p4_eye_idf5.c  idf_component.yml
bsp/esp32_p4_function_ev_board/: esp32_p4_function_ev_board.c
bsp/esp32_s3_eye/: esp32_s3_eye.c  esp32_s3_eye_idf4.c  esp32_s3_eye_idf5.c  idf_component.yml
components/esp_lvgl_port/include/: esp_lvgl_port_disp.h
components/lcd/esp_lcd_ili9881c/: esp_lcd_ili9881c.c  idf_component.yml
examples/esp32_s3_eye_product_test/: partitions.csv  sdkconfig.defaults
examples/esp32_s3_eye_product_test/main/: CMakeLists.txt  (+3 more)
examples/esp32_s3_eye_product_test/main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
examples/esp32_s3_eye_product_test/main/ui/components/: ui_comp_hook.c
examples/esp32_s3_eye_product_test/main/ui/images/: ui_img_1184979050.c  ui_img_1706561437.c  ui_img_374834912.c  ui_img_424947501.c  ui_img_coffee_pic_2_png.c
examples/esp32_s3_eye_product_test/main/ui/screens/: ui_ScreenButton.c  ui_ScreenCamera.c  ui_ScreenColor.c  ui_ScreenIMU.c  ui_ScreenSpeech.c  ui_ScreenSuccess.c
examples/lvgl_demo_v9/: sdkconfig.defaults
examples/p4_eye_capture_picture/: partitions.csv  sdkconfig.defaults
examples/p4_eye_product_test/: sdkconfig.defaults
examples/p4_eye_product_test/main/: CMakeLists.txt  app_audio.c  app_audio.h  app_video.c  app_video.h  display_main.c  idf_component.yml
examples/p4_eye_product_test/main/images/: esp_logo.c  esp_text.c
(+36 files in other folders)
